--- a/index.html
+++ b/index.html
@@ -74,11 +74,28 @@
     </ul>
 
     <div class="detail-image-container">
+      <div class = "left-button-overlay">
+        <button class = "left-button">&lt</button>
+      </div>
       <div class="detail-image-frame">
+
         <img class="detail-image" data-image-role="target" src="img/otter1.jpg" alt="">
         <span class="detail-image-title" data-image-role="title">Stayin' Alive</span>
+
       </div>
+      <div class = "right-button-overlay">
+        <button class = "right-button">&gt</button>
+      </div>
+
     </div>
+
+
+
+
+
+
+
+
   </main>
   <script src="scripts/main.js" charset="utf-8"></script>
 </body>
