--- a/index.html
+++ b/index.html
@@ -25,45 +25,35 @@
   <main class="main-content">
     <ul class="thumbnail-list">
       <li class="thumbnail-item">
-        <a href="img/otter1.jpg" data-image-role="trigger"
-                                data-image-title="Stayin' Alive"
-                                data-image-url="img/otter1.jpg">
+        <a href="img/otter1.jpg" data-image-role="trigger" data-image-title="Stayin' Alive" data-image-url="img/otter1.jpg">
           <img class="thumbnail-image" src="img/otter1.jpg" alt="Barry the Otter">
           <span class="thumbnail-title">Barry</span>
         </a>
 
       </li>
       <li class="thumbnail-item">
-        <a href="img/otter2.jpg" data-image-role="trigger"
-                                data-image-title="How Deep Is Your Love"
-                                data-image-url="img/otter2.jpg">
+        <a href="img/otter2.jpg" data-image-role="trigger" data-image-title="How Deep Is Your Love" data-image-url="img/otter2.jpg">
           <img class="thumbnail-image" src="img/otter2.jpg" alt="Robin the Otter">
           <span class="thumbnail-title">Robin</span>
         </a>
 
       </li>
       <li class="thumbnail-item">
-        <a href="img/otter3.jpg" data-image-role="trigger"
-                                data-image-title="You Should Be Dancing"
-                                data-image-url="img/otter3.jpg">
+        <a href="img/otter3.jpg" data-image-role="trigger" data-image-title="You Should Be Dancing" data-image-url="img/otter3.jpg">
           <img class="thumbnail-image" src="img/otter3.jpg" alt="Maurice the Otter">
           <span class="thumbnail-title">Maurice</span>
         </a>
 
       </li>
       <li class="thumbnail-item">
-        <a href="img/otter4.jpg" data-image-role="trigger"
-                                data-image-title="Night Fever"
-                                data-image-url="img/otter4.jpg">
+        <a href="img/otter4.jpg" data-image-role="trigger" data-image-title="Night Fever" data-image-url="img/otter4.jpg">
           <img class="thumbnail-image" src="img/otter4.jpg" alt="Lesley the Otter">
           <span class="thumbnail-title">Lesley</span>
         </a>
 
       </li>
       <li class="thumbnail-item">
-        <a href="img/otter5.jpg" data-image-role="trigger"
-                                data-image-title="To Love Somebody"
-                                data-image-url="img/otter5.jpg">
+        <a href="img/otter5.jpg" data-image-role="trigger" data-image-title="To Love Somebody" data-image-url="img/otter5.jpg">
           <img class="thumbnail-image" src="img/otter5.jpg" alt="Barbara the Otter">
           <span class="thumbnail-title">Barbara</span>
 
@@ -74,8 +64,8 @@
     </ul>
 
     <div class="detail-image-container">
-      <div class = "left-button-overlay">
-        <button class = "left-button">&lt</button>
+      <div class="left-button-overlay">
+        <button class="left-button">&lt</button>
       </div>
       <div class="detail-image-frame">
 
@@ -83,18 +73,11 @@
         <span class="detail-image-title" data-image-role="title">Stayin' Alive</span>
 
       </div>
-      <div class = "right-button-overlay">
-        <button class = "right-button">&gt</button>
+      <div class="right-button-overlay">
+        <button class="right-button">&gt</button>
       </div>
 
     </div>
-
-
-
-
-
-
-
 
   </main>
   <script src="scripts/main.js" charset="utf-8"></script>
